# android-commander

./: .editorconfig  .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.github/: dependabot.yml
.github/workflows/: main.yml
.junie/: guidelines.md
client/: .env  Cargo.toml  Makefile  build.rs
client/assets/: Icon.icns  Info.plist
client/src/: adb_server_recipe.rs  data.rs  feature.rs  function.rs  lib.rs  main.rs  model.rs  prelude.rs  widget_style.rs
client/src/data/: asset.rs  key_map_repository.rs  preferences_repository.rs  resource.rs
client/src/feature/: main.rs  migrate.rs  settings.rs
client/src/feature/main/: adb_server_recipe.rs  color_key_style_sheet.rs
client/src/feature/migrate/: migrate_0_1_0.rs  migrate_0_1_1.rs  migrate_0_1_2.rs  migrate_0_1_3.rs  migrate_0_1_4.rs  migrate_functions.rs
client/src/function/: serde_functions.rs
client/src/model/: app_command.rs  file_version.rs  preferences.rs  send_event_key.rs  theme.rs  x_message.rs
server/: .gitignore  Makefile  build.gradle  gradle.properties  settings.gradle
server/app/: build.gradle
server/app/src/main/: AndroidManifest.xml
server/app/src/main/java/jp/tinyport/androidcommander/server/: KeyAction.java  KeyCode.java
server/app/src/main/java/kotlin/jvm/internal/: Intrinsics.java
server/app/src/main/kotlin/jp/tinyport/androidcommander/server/: InputManagerWrapper.kt  KeyCode.kt  Main.kt  ServiceManagerWrapper.kt
server/gradle/: libs.versions.toml
src/: main.rs
