[package]
name = "android-commander"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

[dependencies]
anyhow = "=1.0.32"
dotenv = "=0.15.0"
env_logger = "=0.7.1"
log = "=0.4.11"
structopt = "=0.3.16"
thiserror = "=1.0.23"

[dependencies.iced]
git = "https://github.com/hecrj/iced.git"
rev = "fb015a85d22a7c4632bd251127a89259bfd0c346"
features = ["tokio"]

[dependencies.iced_futures]
git = "https://github.com/hecrj/iced.git"
rev = "fb015a85d22a7c4632bd251127a89259bfd0c346"

[dependencies.iced_native]
git = "https://github.com/hecrj/iced.git"
rev = "fb015a85d22a7c4632bd251127a89259bfd0c346"

[dependencies.tokio]
version = "=0.2.22"
features = ["rt-threaded", "fs", "macros", "sync", "time"]

[target.'cfg(windows)'.dependencies.winapi]
version = "=0.3.9"
default-features = false
features = ["wincon"]
