[package]
name = "android-commander"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

[dependencies]
anyhow = "=1.0.38"
dotenv = "=0.15.0"
env_logger = "=0.8.2"
log = "=0.4.14"
structopt = "=0.3.21"
thiserror = "=1.0.23"

[dependencies.iced]
git = "https://github.com/hecrj/iced.git"
rev = "8d882d787e6b7fd7c2435f42f82933e2ed904edf"
features = ["tokio"]

[dependencies.iced_futures]
git = "https://github.com/hecrj/iced.git"
rev = "8d882d787e6b7fd7c2435f42f82933e2ed904edf"

[dependencies.iced_native]
git = "https://github.com/hecrj/iced.git"
rev = "8d882d787e6b7fd7c2435f42f82933e2ed904edf"

[dependencies.tokio]
version = "=1.6.1"
features = ["fs", "macros", "rt-multi-thread", "sync", "time"]

[target.'cfg(windows)'.dependencies.winapi]
version = "=0.3.9"
default-features = false
features = ["wincon"]
