[package]
name = "android-commander"
version = "0.1.3"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2024"

[dependencies]
anyhow = "=1.0.98"
async-trait = "=0.1.88"
directories = "=6.0.0"
dotenv = "=0.15.0"
iced = { version = "=0.13.1", features = ["svg", "tokio"] }
rust-embed = { version = "=8.7.2", features = ["include-exclude"] }
serde = { version = "=1.0.219", features = ["derive"] }
tempfile = "=3.20.0"
tokio = { version = "=1.45.1", features = ["fs", "io-std", "io-util", "macros", "sync"] }
toml = "=0.8.22"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.19"
