[package]
name = "android-commander"
version = "0.1.3"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2024"

[dependencies]
anyhow = "=1.0.101"
async-trait = "=0.1.89"
directories = "=6.0.0"
dotenv = "=0.15.0"
iced = { version = "=0.14.0", features = ["svg", "tokio", "sipper"] }
rust-embed = { version = "=8.11.0", features = ["include-exclude"] }
serde = { version = "=1.0.228", features = ["derive"] }
tempfile = "=3.24.0"
tokio = { version = "=1.49.0", features = ["fs", "io-std", "io-util", "macros", "process", "sync"] }
toml = "=0.9.11"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.22"
