[package]
name = "android-commander"
version = "0.1.4"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2024"

[package.metadata.winres]
LegalCopyright = "Copyright © sukawasatoru"
OriginalFilename = "android-commander.exe"

[target.'cfg(windows)'.build-dependencies]
winres = "=0.1.12"

[dependencies]
anyhow = "=1.0.101"
directories = "=6.0.0"
dotenv = "=0.15.0"
iced = { version = "=0.14.0", features = ["svg", "tokio", "sipper"] }
rust-embed = { version = "=8.11.0", features = ["include-exclude"] }
serde = { version = "=1.0.228", features = ["derive"] }
tempfile = "=3.24.0"
tokio = { version = "=1.49.0", features = ["fs", "io-std", "io-util", "macros", "process", "sync"] }
toml = "=1.0.1"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.22"

[target.'cfg(windows)'.dependencies]
image = { version = "=0.25.9", default-features = false, features = ["png"] }
